# firebase-stuff

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  db.py  firebase_service.py  main.py  schemas.py
flutter_app/: .gitignore  README.md  pubspec.yaml
flutter_app/android/: settings.gradle.kts
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/ios/Runner/: Info.plist
flutter_app/lib/: main.dart
flutter_app/lib/services/: api_service.dart  notification_service.dart
